fixed issue with text not showing at inception on the 3 circles button

--- a/buttonstyles.css
+++ b/buttonstyles.css
@@ -450,26 +450,28 @@ h2 {
 }
 
 #button12 {
-  width: 150px;
+  width: 200px;
   height: 80px;
-  color: #ff0;
+  color: magenta;
   background-color: transparent;
   font-size: 26px;
+  text-decoration: none;
   text-transform: uppercase;
   text-align: center;
   line-height: 80px;
   transition: all 0.5s;
   position: relative;
+  z-index: 5;
 }
 
 #button12:before,
 #button12:after {
-  content: '';
+  content: "";
   position: absolute;
   top: 50%;
   width: 20px;
   height: 20px;
-  background-color: #ff0;
+  background-color: magenta;
   border-radius: 50%;
   transform: translateY(-50%);
   transition: all 0.3s;
@@ -479,35 +481,35 @@ h2 {
 
 #button12:before {
   left: 0;
-  box-shadow: -100px 0 0 #ff0;
+  box-shadow: -100px 0 0 magenta;
 }
 
 #button12:after {
   right: 0;
-  box-shadow: 100px 0 0 #ff0;
+  box-shadow: 100px 0 0 magenta;
 }
 
 #button12:hover:before {
   left: 50%;
-  box-shadow: 30px 0 0 #ff0;
+  box-shadow: 30px 0 0 magenta;
   transform: translateX(-50%) translateY(-50%);
   opacity: 1;
 }
 
 #button12:hover:after {
   right: 50%;
-  box-shadow: -30px 0 0 #ff0;
+  box-shadow: -30px 0 0 magenta;
   transform: translateX(50%) translateY(-50%);
   opacity: 1;
 }
 
-#span-button12 {
+span {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #ff0;
+  background-color: magenta;
   border-radius: 8px;
   transform: scale(0);
   transition: all 0.3s;
@@ -517,9 +519,9 @@ h2 {
 #button12:hover #span-button12 {
   transform: scale(1);
   transition-delay: 0.4s;
-}
+} 
 
 #button12:hover {
-  color: #262626;
+  color: white;
   transition-delay: 0.4s;
 }
